# metagpt-v1

./: .gitignore  README.md  deploy.sh  package-lock.json  utputFormat
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  db.py  main.py
backend/app/agents/: __init__.py  architect.py  base.py  engineer.py  manager.py  qa.py
backend/app/api/: router.py
backend/app/api/endpoints/: auth.py  chat.py  files.py  pipeline.py  projects.py  rag.py  sandbox.py
backend/app/graph/: __init__.py  orchestrator.py  state.py
backend/app/llm/: __init__.py  gemini.py
backend/app/models/: __init__.py  project.py  user.py
backend/app/rag/: __init__.py  embeddings.py  indexer.py  retriever.py  vector_store.py
backend/app/schemas/: __init__.py  agents.py  files.py  projects.py
backend/app/services/: __init__.py  chat_service.py  pipeline_service.py  sandbox_service.py
backend/app/sop/: __init__.py  definitions.py
backend/app/storage/: __init__.py  file_store.py  project_store.py
backend/tests/: __init__.py  conftest.py  test_agents.py  test_api.py
docs/: ARCHITECTURE.md  EXAMPLE_WALKTHROUGH.md  TECHNICAL_OVERVIEW.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  cloudbuild.yaml  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
report/: main.aux  main.fdb_latexmk  main.fls  main.lof  main.lot  main.tex  main.toc  pdflatex_output.txt  template.cls
report/chapter/: abbreviation.tex  abstract.tex  appendix.tex  ch6_conclusion.tex  (+7 more)
(+31 files in other folders)
