[project]
name = "metagpt"
version = "1.0.0"
description = "MetaGPT-style agentic system with SOP-driven autonomous agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.0.9",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "sse-starlette>=1.8.0",
    "python-dotenv>=1.0.0",
    "beanie>=2.0.0,<3.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "e2b-code-interpreter>=1.0.0",
    "chromadb>=0.4.0",
    "langchain-chroma>=0.1.0",
    "langchain-text-splitters>=0.0.1",
]

[project.scripts]
serve = "app.main:serve"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
